# chat-service/docs/swagger.json
@@ -526,8 +526,7 @@
         "models.CreateConversationRequest": {
             "type": "object",
             "required": [
-                "member_user_ids",
-                "type"
+                "member_user_ids"
             ],
             "properties": {
                 "creatorID": {
@@ -535,7 +534,7 @@
                 },
                 "member_user_ids": {
                     "type": "array",
-                    "minItems": 2,
+                    "minItems": 1,
                     "items": {
                         "type": "integer"
                     }
